--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
+    "deploy": "npm install && npm run build",
     "dev": "ts-node src/index.ts"
   },
   "keywords": [],
