--- a/package.json
+++ b/package.json
@@ -1,27 +1,57 @@
 {
-  "name": "expenses_back",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc",
-    "deploy": "npm install && npm run build",
-    "dev": "ts-node src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
-  }
+	"name": "bf_sse",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node dist/index.js",
+		"dev": "ts-node src/index.ts",
+		"build": "tsc"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/cookie-parser": "^1.4.6",
+		"@types/cors": "^2.8.17",
+		"@types/crypto-js": "^4.1.1",
+		"@types/express": "^4.17.17",
+		"@types/express-fileupload": "^1.4.4",
+		"@types/joi": "^17.2.3",
+		"@types/pg": "^8.11.10",
+		"@types/swagger-jsdoc": "^6.0.1",
+		"@types/swagger-ui-express": "^4.1.3",
+		"@types/uuid": "^9.0.2",
+		"@types/winston": "^2.4.4",
+		"@types/xml": "^1.0.11",
+		"ts-node": "^10.9.2",
+		"typescript": "^4.9.5"
+	},
+	"dependencies": {
+		"axios": "^1.3.3",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"crypto-js": "^4.1.1",
+		"cryptojs": "^2.5.3",
+		"dayjs": "^1.11.8",
+		"dotenv": "^16.4.5",
+		"express": "^4.18.2",
+		"express-fileupload": "^1.5.0",
+		"express-http-context": "^1.2.4",
+		"express-jsdoc-swagger": "^1.8.0",
+		"joi": "^17.9.2",
+		"maska": "^3.0.0-beta4",
+		"moment": "^2.29.4",
+		"pg": "^8.13.0",
+		"reflect-metadata": "^0.1.13",
+		"sequelize": "^6.32.0",
+		"sequelize-typescript": "^2.1.5",
+		"string-mask": "^0.3.0",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^4.6.3",
+		"uuid": "^9.0.0",
+		"winston": "^3.8.2",
+		"xlsx": "^0.18.5",
+		"xml": "^1.0.1"
+	}
 }
